2005-02-24 Mikhail Khodjaiants
	Applied patch from Tracy Miranda (bug 86533: Breakpoint is set on the wrong line in Disassembly view).
	* DisassemblyEditorInput.java

2005-02-22 Mikhail Khodjaiants
	Bug 84799: Implement Memory View and renderings with new rendering APIs.
	* plugin.xml

2005-02-17 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Removed the Shared Libraries view.
	* CDebugModelPresentation.java
	* LoadSymbolsActionDelegate.java
	* LoadSymbolsForAllActionDelegate.java
	* SharedLibrariesMessages.java
	* SharedLibrariesMessages.properties
	* SharedLibrariesView.java
	* SharedLibrariesViewContentProvider.java
	* SharedLibrariesViewEventHandler.java
	* ICDebugUIConstants.java
	* plugin.properties
	* plugin.xml

2005-02-17 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	No need to compute the module's labels in background.
	* ModulesView.java

2005-02-16 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Replaced the table viewer by text widgets.
	* PropertyPageMessages.properties
	* ModulePropertyPage.java

2005-02-16 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	The symbols file name isn't shown in the detail pane if module's 
	symbols are not loaded.
	* ModulesView.java
	
2005-02-16 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	The "Load Symbols" action doesn't update the detail value.
	* ModulesViewEventHandler.java

2005-02-15 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	The "Load Symbols For All" action is added to the Modules view.
	* plugin.xml
	* plugin.properties
	* icons/full/clcl16/load_all_symbols_co.gif
	* icons/full/dlcl16/load_all_symbols_co.gif
	* icons/full/elcl16/load_all_symbols_co.gif
	* ICDebugUIInternalConstants.java: removed (cleanup)

2005-02-15 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	The Modules view's doesn't update labels when symbols are loaded.
	* ModulesViewEventHandler.java
